[package]
name = "spirv-linker"
version = "0.1.0"
edition = "2021"
description = "SPIR-V linker"
homepage = "https://traverseresearch.nl"
documentation = "https://docs.rs/spirv-linker"
readme = "README.md"
keywords = ["rendering"]
categories = ["api-bindings", "rendering"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Traverse-Research/spirv-linker"

[dependencies]
rspirv = "0.11"
thiserror = "1"
topological-sort = "0.1"